@@ -233,7 +233,7 @@ public class MapSøknadUttakPerioder {
                     entry.getValue().getErSammenMedBarnet()
                 )
             )
-            .toList();
+            .collect(Collectors.toList());
 
         if (utenlandsopphold.getPerioderSomSkalSlettes() != null) {
             utenlandsoppholdPerioder.addAll(utenlandsopphold.getPerioderSomSkalSlettes()
@@ -249,7 +249,7 @@ public class MapSøknadUttakPerioder {
                         entry.getValue().getErSammenMedBarnet()
                     )
                 )
-                .toList());
+                .collect(Collectors.toList()));
         }
         return utenlandsoppholdPerioder;
     }
